--- a/css/design.css
+++ b/css/design.css
@@ -1,37 +1,51 @@
-@font-face {
-    font-family:"acme";
-    src: url("../Downloaded/acme/acmeregular.ttf") /* TTF file for CSS3 browsers */
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+body, html {
+    height: 100%;
+    color: #777;
+    line-height: 1.8;
 }
 
-@font-face {
-    font-family:"andika";
-    src: url("../Downloaded/acme/andikar.ttf") /* TTF file for CSS3 browsers */
-}
-h1,h3{
-	font-family:'acme', sans-serif;
-}
-h4 {
-	font-family: 'andika';
-}
-.bottom-bar{
-	color:white;
-	bottom:0px;
-}
-.address{
-	background-color:white;
-	margin: auto;
+/* Create a Parallax Effect */
+.bgimg-1, .bgimg-2, .bgimg-3 {
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.contact-details{
-	background-color:red;
-	margin: auto;
+/* First image (Logo. Full height) */
+.bgimg-1 {
+    background-image: url('../images/IMG_8597.jpg');
+    min-height: 100%;
 }
-h3 {
-    font-size: 26px;
-    font-weight:500;
-    text-align: left;
-    line-height: 100%;
-    border-bottom: 1px solid #484848;
-    padding-bottom: 5px;
-    margin-bottom:7px;
+
+/* Second image (Portfolio) */
+.bgimg-2 {
+    background-image: url("../images/IMG_9133.jpg");
+    min-height: 400px;
+}
+
+#modal02 {
+	left:10%;
+	top:10%;
+	width:80%;
+	height:80%;
+	opacity:0.9;
+}
+
+/* Third image (Contact) */
+.bgimg-3 {
+    background-image: url("../images/IMG_8731.jpg");
+    min-height: 400px;
+}
+
+.w3-wide {letter-spacing: 10px;}
+.w3-hover-opacity {cursor: pointer;}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1600px) {
+    .bgimg-1, .bgimg-2, .bgimg-3 {
+        background-attachment: scroll;
+        min-height: 400px;
+    }
 }
