--- a/css/design.css
+++ b/css/design.css
@@ -1,12 +1,17 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
     height: 100%;
-    color: #777;
+    color: black;
     line-height: 1.8;
+}
+body{
+   background-image: url('../images/lotus1.png');
+   background-repeat: repeat; 
+   background-color: #f4e3d7;
 }
 
 /* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
+.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4 {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -15,19 +20,24 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('../images/IMG_8597.JPG');
+    background-image: url('../images/photo2.jpg');
     min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-    background-image: url("../images/IMG_9133.JPG");
+    background-image: url("../images/photo1.jpg");
     min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url("../images/IMG_8731.JPG");
+    background-image: url("../images/image3.jpg");
+    min-height: 400px;
+}
+
+.bgimg-4 {
+    background-image: url("../images/photo4.jpg");
     min-height: 400px;
 }
 
@@ -36,7 +46,7 @@ body, html {
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1600px) {
-    .bgimg-1, .bgimg-2, .bgimg-3 {
+    .bgimg-1, .bgimg-2, .bgimg-3, bgimg-4 {
         background-attachment: scroll;
         min-height: 400px;
         min-width: 499px;
