--- a/css/design.css
+++ b/css/design.css
@@ -5,20 +5,19 @@ body, html {
     line-height: 1.8;
 }
 body{
-   background-image: url('../images/pattern1.png');
+   background-image: url('../images/pattern2.png');
    background-repeat: repeat; 
    background-color: #cc6600cc;
 }
 
 .custom-temporary{
-    background-image: url('../images/to-be-announced1.jpeg');
     width:100%;
     min-height: 50%;
     background-repeat: no-repeat;
     background-size: cover;
 }
 /* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4 {
+.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4, .bgimg-5 {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -63,12 +62,16 @@ body{
 
 /* Third image (Contact) */
 .bgimg-3 {
-    background-image: url("../images/image3.jpg");
+    background-image: url("../images/to-be-announced1.jpeg");
     min-height: 400px;
 }
 
 .bgimg-4 {
     background-image: url("../images/photo4.jpg");
+    min-height: 400px;
+}
+.bgimg-5 {
+    background-image: url("../images/IMG_9133.JPG");
     min-height: 400px;
 }
 
@@ -77,7 +80,7 @@ body{
 
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1600px) {
-    .bgimg-1, .bgimg-2, .bgimg-3, bgimg-4 {
+    .bgimg-1, .bgimg-2, .bgimg-3, bgimg-4, bgimg-5 {
         background-attachment: scroll;
         min-height: 400px;
         min-width: 499px;
