--- a/css/design.css
+++ b/css/design.css
@@ -10,6 +10,10 @@ body{
    background-color: #cc6600cc;
 }
 
+.heading-shader{
+    text-shadow: 0px 0px 3px #000000;
+}
+
 .custom-temporary{
     width:100%;
     min-height: 50%;
@@ -85,4 +89,20 @@ body{
         min-height: 400px;
         min-width: 499px;
     }
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #cc0000; /* Blue */
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
