--- a/css/design.css
+++ b/css/design.css
@@ -90,16 +90,28 @@ body{
         min-width: 499px;
     }
 }
-
+.loader-container{
+  position:fixed;
+  z-index: 99999;
+  top: 45%;
+  left: 45%;
+}
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #cc0000; /* Blue */
+  border: 16px solid #f3f3f300; /* light grey */
+  border-top: 16px solid #cc0000cc; /* red */
+  /*border-left: 16px solid #cc6600cc; /* orange */
+  border-bottom: 16px solid #cc0000cc; /* red */
+  /*border-right: 16px solid #cc6600cc; /* orange */
   border-radius: 50%;
-  top: 50%;
-  left: 50%;
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
+}
+.loader-text {
+  text-align: center;
+  position:relative;
+  z-index: 99999;  
+  animation: none;
 }
 
 @keyframes spin {
